# karasiq

./: .gitignore  CMakeLists.txt  contacts.db  history.db  karasiq.db  main.cpp  resources.qrc
include/Component/: AbstractLogger.hpp  AuthTokenCreator.hpp  Authenticator.hpp  ChatContactFactory.hpp  ChatMessageFactory.hpp  ConnectionWrapper.hpp  EntityFixture.hpp  EntitySchema.hpp  EntitySchemaContainer.hpp  EntitySerializer.hpp  FontDatabase.hpp  PasswordHasher.hpp  QtMethodLogger.hpp  RandomIDGenerator.hpp  SelectItemFactory.hpp  SequentlyIDGenerator.hpp  Sqlite3SomeQuery.hpp
include/Core/: Connection.hpp  DatabasePreloader.hpp  Loader.hpp  MainWindow.hpp  SocketClient.hpp  SystemPreloader.hpp
include/Entity/: ContactAddDataEntity.hpp  ContactEntity.hpp  ContactFindDataEntity.hpp  ExtendedStatusEntity.hpp  MessageEntity.hpp  ProgLangEntity.hpp  SystemEntity.hpp  UserEntity.hpp  UserInfoEntity.hpp
include/Graphics/: AnimatedWidget.hpp  AuthenticatorWidget.hpp  CSSableWidget.hpp  ChatBodyWidget.hpp  ChatContactsWidget.hpp  ChatControlsAreaWidget.hpp  ChatMessageWidget.hpp  ChatMessagesAreaWidget.hpp  ChatOptionsWidget.hpp  ClickableLabel.hpp  ContactList.hpp  ContactListItem.hpp  ContactSearchWidget.hpp  ContactsSortWidget.hpp  DialogTabs.hpp  DropDownBody.hpp  DropDownButton.hpp  DropDownContactList.hpp  DropDownList.hpp  ExtendedStatusWidget.hpp  HSpase.hpp  LabeledInput.hpp  LabeledPasswordInput.hpp  ListGroup.hpp  ListWidget.hpp  LoadingProgress.hpp  MainMenu.hpp  MainMenuItem.hpp  MainWidget.hpp  PasswordInput.hpp  Select.hpp  SelectBody.hpp  SelectHead.hpp  SelectItem.hpp  StatusMessageWidget.hpp  StyledButton.hpp  TabCloseButton.hpp  TextArea.hpp  VSpase.hpp  VerticalScrollBar.hpp  (+1 more)
include/Interface/: Countable.hpp
include/Struct/: Animation.hpp
include/Test/: AbstractTest.hpp  LoggerTest.hpp
include/View/: ChatView.hpp  DialogTabView.hpp  SettingsView.hpp
rsc/: theme.qss
rsc/icons/: github-recovery-codes.txt
src/Component/: AbstractLogger.cpp  AuthTokenCreator.cpp  Authenticator.cpp  ChatContactFactory.cpp  ChatMessageFactory.cpp  ConnectionWrapper.cpp  DropDownContactList.cpp  EntityFixture.cpp  EntitySerializer.cpp  FontDatabase.cpp  PasswordHasher.cpp  QtMethodLogger.cpp  RandomIDGenerator.cpp  SequentlyIDGenerator.cpp  Sqlite3SomeQuery.cpp
src/Core/: DatabasePreloader.cpp  Loader.cpp  MainWindow.cpp  SocketClient.cpp  SystemPreloader.cpp
src/Graphics/: AnimatedWidget.cpp  AuthenticatorWidget.cpp  CSSableWidget.cpp  ChatBodyWidget.cpp  ChatContactsWidget.cpp  ChatControlsAreaWidget.cpp  ChatMessageWidget.cpp  ChatMessagesAreaWidget.cpp  ChatOptionsWidget.cpp  ClickableLabel.cpp  ContactList.cpp  ContactListItem.cpp  ContactSearchWidget.cpp  ContactsSortWidget.cpp  DialogTabs.cpp  DropDownBody.cpp  DropDownButton.cpp  DropDownList.cpp  ExtendedStatusWidget.cpp  HSpase.cpp  LabeledInput.cpp  LabeledPasswordInput.cpp  ListGroup.cpp  ListWidget.cpp  LoadingProgress.cpp  MainMenu.cpp  MainMenuItem.cpp  MainWidget.cpp  PasswordInput.cpp  Select.cpp  SelectBody.cpp  SelectHead.cpp  SelectItem.cpp  SelectItemFactory.cpp  StatusMessageWidget.cpp  StyledButton.cpp  TabCloseButton.cpp  TextArea.cpp  VSpase.cpp  VerticalScrollBar.cpp  (+1 more)
src/Test/: LoggerTest.cpp
src/View/: ChatView.cpp  DialogTabView.cpp  SettingsView.cpp
tests/: tests.hpp
